--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
             <a class="link-button" href="https://www.instagram.com/__po_ta_to___/">Follow Me</a>
         </div>
         <div class="half-width">
-            <img src="images/esha.png"/>
+            <img src="Images/esha.png"/>
         </div>
         </section>
         <section class="dream-area">
             <div class="half-width">
-                <img src="images/farah.png"/>
+                <img src="Images/farah.png"/>
 
 
             </div>
