--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h1>Welcome to </h1>
             <h1><span class="cyan-highlight">Esha Farah's </span> World</h1>
             <h3>World Class Artist</h3>
-            <p>I am a great artist.I can paint any sort of drawings or arts.</p>
+            <p>I am a great artist.I can paint any sort of drawings or arts. I am good at photography too.And obviously I have a great voice.I am very good at singing.As you can see I am multi talented.</p>
             <a class="link-button" href="https://www.instagram.com/__po_ta_to___/">Follow Me</a>
         </div>
         <div class="half-width">
