--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Esha Farah</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Zilla+Slab&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Zilla+Slab&display=swap" rel="stylesheet"/>
     </head>
 <body>
     <section class="top-banner">
