--- a/index.html
+++ b/index.html
@@ -50,7 +50,15 @@
                 </div>
             </section>
 
-        <footer>© Fatima Farah Esha 2021, All Rights Reserved</footer>
+            <section class="song-area">
+                <div id="bests">
+                    <h2 id="header">Songs I Love Most</h2>
+                    <iframe class="prematal" width="680" height="315" src="https://www.youtube.com/embed/pXAFAxOTB6A" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="raabta" width="680" height="315" src="https://www.youtube.com/embed/zlt38OOqwDc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="zayn" width="680" height="315" src="https://www.youtube.com/embed/uI2-vtELL5I" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+
+        
     
 </body>
 </html>
